--- a/settings.gradle
+++ b/settings.gradle
@@ -102,6 +102,7 @@ include ":benchmarks",
         ":compiler:ir.interpreter",
         ":compiler:ir.inline",
         ":compiler:backend.js",
+        ":compiler:backend.jack",
         ":compiler:backend.wasm",
         ":compiler:backend.jvm",
         ":compiler:backend.jvm.lower",
@@ -756,6 +757,7 @@ project(':compiler:ir.backend.common').projectDir = "$rootDir/compiler/ir/backen
 project(':compiler:ir.actualization').projectDir = "$rootDir/compiler/ir/ir.actualization" as File
 project(':compiler:ir.inline').projectDir = "$rootDir/compiler/ir/ir.inline" as File
 project(':compiler:backend.js').projectDir = "$rootDir/compiler/ir/backend.js" as File
+project(':compiler:backend.jack').projectDir = "$rootDir/compiler/ir/backend.jack" as File
 project(':compiler:backend.wasm').projectDir = "$rootDir/compiler/ir/backend.wasm" as File
 project(':compiler:backend.jvm').projectDir = "$rootDir/compiler/ir/backend.jvm" as File
 project(':compiler:backend.jvm.lower').projectDir = "$rootDir/compiler/ir/backend.jvm/lower" as File
